maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:5: error: not found: value prendreBiscuit
  prendreBiscuit()
  ^