maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while (!estSurBiscuit()){
    keepHandOnSideWall()
  }
  prendreBiscuit()
}

def keepHandOnSideWall(){
  gauche()
  if (estFaceMur()){
    droite()
  }
  if (estFaceMur()){
    droite()
  }
  if (estFaceMur()){
    droite()
  }
  avance()
}